--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cookie-session": "^2.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "geoip-lite": "^1.4.7",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
