--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "description": "site de vente vetements, chaussures et accessoires",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Djiby Sarr",
   "license": "ISC",
